# ClusterLOCO

./: .gitignore  README.md  pyproject.toml
.github/workflows/: release.yml
.ipynb_checkpoints/: README-checkpoint.md
benchmarking/: neuralized_kmeans.py  prototypes.py
benchmarking/.ipynb_checkpoints/: Other_Feature_Importances-checkpoint.ipynb  __init__-checkpoint.py  benchmark_measures-checkpoint.py  cluster_level-checkpoint.py
clim/: __init__.py
clim.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
clim/.ipynb_checkpoints/: __init__-checkpoint.py  valid_indices-checkpoint.py
clim/data_splitting/: generalizability.py
clim/minipatches/: generalizability.py
clim/models/: dr_clustering.py
clim/utils/: model_selection.py  non_conformity_scores.py  plots.py  utils.py
example/: Example_PBMC68k.ipynb  Example_Simulated_Data.ipynb
example/.ipynb_checkpoints/: Example_Simulated_Data-checkpoint.ipynb
paper_figures/: Figure2.ipynb  Figures3_4.ipynb
paper_figures/.ipynb_checkpoints/: Figure1-checkpoint.ipynb  Figures3_4-checkpoint.ipynb
paper_figures/data/: PBMC68k_FI_score_Global_K10.csv  full_marker_list_hand.csv
paper_figures/models/: pbmc68k_results_HC_K10.pkl  pbmc68k_results_KMeans_K10.pkl
scripts/.ipynb_checkpoints/: PBMC68k_models-checkpoint.py  figure2_experiment-checkpoint.py  figure2_experiments-checkpoint.py  run_configs-checkpoint.py
simulations/: __init__.py  mixture_models.py  simulators.py  toy_datasets.py
simulations/.ipynb_checkpoints/: simulators-checkpoint.py
simulations/scripts/: run_configs.py
(+12 files in other folders)
