[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "clim"
version = "0.1.2"
description = "Cluster LOCO feature importance methods for clustering interpretability"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "Claire He" }
]
dependencies = [
    "numpy",
    "scipy",
    "pandas",
    "scikit-learn",
    "joblib",
    "tqdm",
    "seaborn",
    "matplotlib",
    "leidenalg",
    "igraph",
]
[project.optional-dependencies]
experiments = [
    "anndata",
    "scanpy",
]
[tool.setuptools.packages.find]
where = ["."]
include = ["clim*"]
